--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,25 +1,25 @@
-name: create doon db
-
+name: doon
 on:
   push:
+    branches:
+      - master
   pull_request:
     branches:
       - master
-
-defaults:
-  run:
-    shell: bash
-
 jobs:
-  test:
+  build:
     rans-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: [3.7, 3.8]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Set up Python 3.8
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v1
         with:
-          python-version: 3.8
+          python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           python -m pip install -U pip
@@ -37,6 +37,3 @@ jobs:
         with:
           name: doonroom_db
           path: ./doonroom.db
-    # - name: Test with pytest
-    #   run: |
-    #     pytest -vv
