--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,13 @@ on:
   push:
     branches:
       - master
+    tags:
+      - '*'
   pull_request:
     branches:
       - master
+    tags:
+      - '*'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -25,13 +29,12 @@ jobs:
           python -m pip install -U pip
           python -m pip install flake8 pytest
           pip install -r requirements.txt
-      - name: flake8 Lint
+      - name: Lint with flake8
         uses: py-actions/flake8@v1
       - name: Create db
         run: |
           yes | python main.py
-      - name: save as an artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: doonroom_db
-          path: ./doonroom.db
+      - uses: ncipollo/release-action@v1
+      with:
+        artifacts: "./doonroom.db"
+        token: ${{ secrets.GITHUB_TOKEN }}
