--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,11 @@
 name: doon
 on:
   push:
-    tags:
-      - "*"
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,11 +27,6 @@ jobs:
           pip install -r requirements.txt
       - name: Lint with flake8
         uses: py-actions/flake8@v1
-      - name: Create db
-        run: |
-          yes | python main.py
-      - name: Create release
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: "./doonroom.db"
-          token: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Test with pytest
+      #   run: |
+      #     pytest -vv
