--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,8 @@ jobs:
       - name: Create db
         run: |
           yes | python main.py
-      - uses: ncipollo/release-action@v1
+      - name: Create release
+        uses: ncipollo/release-action@v1
         with:
           artifact: ./doonroom.db
           token: ${{ secrets.GITHUB_TOKEN }}
