--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,10 +23,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -U pip
-          python -m pip install flake8 pytest
+          python -m pip install flake8 pytest mypy
           pip install -r requirements.txt
       - name: Lint with flake8
         uses: py-actions/flake8@v1
+      - name: mypy
+        run: |
+          mypy main.py doon/
       # - name: Test with pytest
       #   run: |
       #     pytest -vv
