--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,11 +22,15 @@ jobs:
         run: |
           python -m pip install -U pip
           pip install -r requirements.txt
+          sudo apt install sqlite3
       - name: Create db
         run: |
           yes | python main.py
+      - name: Create dump
+        run: |
+          echo .dump | sqlite3 doonroom.db | python conv.py > doonroom_my.sql
       - name: Create release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "./doonroom.db"
+          artifacts: "doonroom_sqlite.db,doonroom_my.sql"
           token: ${{ secrets.GITHUB_TOKEN }}
