--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,5 +32,5 @@ jobs:
       - name: Create release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "doonroom_sqlite.db,doonroom_my.sql"
+          artifacts: "doonroom.db,doonroom_my.sql"
           token: ${{ secrets.GITHUB_TOKEN }}
