--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,3 +33,23 @@ jobs:
         with:
           artifacts: "doonroom.db,doonroom_my.sql"
           token: ${{ secrets.GITHUB_TOKEN }}
+  pypi:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up Python
+      uses: actions/setup-python@v1
+      with:
+        python-version: '3.x'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install setuptools wheel twine
+    - name: Build and publish
+      env:
+        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+      run: |
+        python setup.py sdist bdist_wheel
+        twine upload dist/*
