--- a/.github/workflows/db_scheduled_release.yml
+++ b/.github/workflows/db_scheduled_release.yml
@@ -2,8 +2,7 @@ name: DB scheduled release
 
 on:
   schedule:
-    cron:
-      - "0 15 * * 0"
+    - cron: "0 15 * * 0"
 jobs:
   build:
     runs-on: ubuntu-latest
