Add: plays and add typing

--- a/mypy.ini
+++ b/mypy.ini
@@ -20,5 +20,10 @@ warn_unused_configs = True
 show_traceback = True
 show_error_codes = True
 pretty = True
+mypy_path = ./out
+
 # always_false = MYPYC
 # plugins = misc/proper_plugin.py
+
+[mypy-bs4.*]
+ignore_errors = True
