--- a/.github/workflows/db_scheduled_release.yml
+++ b/.github/workflows/db_scheduled_release.yml
@@ -15,8 +15,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v3
         with:
+          cache: pip
+          cache-dependency-path: setup.cfg
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
