--- a/.github/workflows/db_scheduled_release.yml
+++ b/.github/workflows/db_scheduled_release.yml
@@ -23,13 +23,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -U pip
-          pip install -r requirements.txt
-      - name: Create db
+          pip install .[dev]
+      - name: Create DB
         run: |
-          yes | python main.py
+          yes | ddb
       - name: Create dump
         run: |
-          echo .dump | sqlite3 doonroom.db | python conv.py > doonroom_my.sql
+          echo .dump | sqlite3 doonroom.db | python sqlite_mysql_conv.py > doonroom_my.sql
       - name: Get date
         run: |
           echo "DATE=$(date +%y%m%d)" >> $GITHUB_ENV
