--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = doonroom_db
 version = attr: doonroom_db.__version__
-description = 同人音声の部屋(http://doonroom.blog.jp/) DB
+description = 同人音声の部屋 (http://doonroom.blog.jp/) Unofficial DB
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/eggplants/doonroom_db
