--- a/.github/workflows/db_scheduled_release.yml
+++ b/.github/workflows/db_scheduled_release.yml
@@ -2,7 +2,7 @@ name: DB scheduled release
 
 on:
   schedule:
-    - cron: "0 15 * * 0"
+    - cron: "0 15 1 * *"
   workflow_dispatch:
 jobs:
   build:
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8]
+        python-version: ['3.11']
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -42,5 +42,5 @@ jobs:
         with:
           artifacts: "doonroom_*.db,doonroom_my_*.sql"
           token: ${{ secrets.GITHUB_TOKEN }}
-          tag: week${{ env.DATE }}
+          tag: month${{ env.DATE }}
           artifactErrorsFailBuild: true
